<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rfidanimacion"
        android:id="@+id/imgv_logo"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INVENTARIO"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorlog"
        android:layout_above="@+id/imgv_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RFID"
        android:id="@+id/textView3"
        android:layout_below="@+id/imgv_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="50dp"
        android:textColor="@color/colorlog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/default_top_padding"
            android:layout_marginTop="@dimen/home_icon_margin_2"
            android:layout_marginLeft="@dimen/home_icon_margin_2"
            android:layout_marginRight="@dimen/home_icon_margin_1"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_read_write"
            android:onClick="rrClicked" />

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_2"
            android:layout_marginLeft="@dimen/home_icon_margin_1"
            android:layout_marginRight="@dimen/home_icon_margin_2"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_inventory"
            android:onClick="invClicked" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_2"
            android:layout_marginLeft="@dimen/home_icon_margin_1"
            android:layout_marginRight="@dimen/home_icon_margin_2"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_regTag"
            android:onClick="regClicked" />

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_2"
            android:layout_marginLeft="@dimen/home_icon_margin_1"
            android:layout_marginRight="@dimen/home_icon_margin_2"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/title_activity_special"
            android:onClick="sfnClicked" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_1"
            android:layout_marginLeft="@dimen/home_icon_margin_2"
            android:layout_marginRight="@dimen/home_icon_margin_1"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_locate"
            android:onClick="locateClicked" />

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_1"
            android:layout_marginLeft="@dimen/home_icon_margin_1"
            android:layout_marginRight="@dimen/home_icon_margin_2"
            android:layout_marginBottom="@dimen/home_icon_margin_1"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_settings"
            android:onClick="settClicked" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_1"
            android:layout_marginLeft="@dimen/home_icon_margin_2"
            android:layout_marginRight="@dimen/home_icon_margin_1"
            android:layout_marginBottom="@dimen/home_icon_margin_2"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_access"
            android:onClick="accessClicked" />

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_marginTop="@dimen/home_icon_margin_1"
            android:layout_marginLeft="@dimen/home_icon_margin_1"
            android:layout_marginRight="@dimen/home_icon_margin_2"
            android:layout_marginBottom="@dimen/home_icon_margin_2"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_filter"
            android:onClick="filterClicked" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            style="@style/DashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/home_icon_margin_1"
            android:layout_marginLeft="@dimen/home_icon_margin_2"
            android:layout_marginRight="@dimen/home_icon_margin_1"
            android:layout_marginBottom="@dimen/home_icon_margin_2"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:text="@string/home_connect"
            android:onClick="connectClicked" />
    </LinearLayout>
</RelativeLayout>