<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_layout_style"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="Codigo Sala"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/txtCodigoSala"
                android:enabled="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="Nombre Sala"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/txtNombreSala"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inventoryMultibankSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/accessInventoryBankTitle1"
                style="@style/style_normal_font"
                android:layout_width="wrap_content"
                android:text="Bank" />

            <Spinner
                android:id="@+id/accessInventoryBank1"
                style="@style/style_default_spinner"
                android:layout_margin="0dp"
                android:layout_weight="3" />

            <TextView
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/readWriteOffset_title" />

            <EditText
                android:id="@+id/accessInventoryOffset1"
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="0" />

            <TextView
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/readWriteSize_title" />

            <EditText
                android:id="@+id/accessInventoryLength1"
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/accessInventoryBankTitle2"
                style="@style/style_normal_font"
                android:layout_width="wrap_content"
                android:text="Bank" />

            <Spinner
                android:id="@+id/accessInventoryBank2"
                style="@style/style_default_spinner"
                android:layout_margin="0dp"
                android:layout_weight="3" />

            <TextView
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/readWriteOffset_title" />

            <EditText
                android:id="@+id/accessInventoryOffset2"
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="0" />

            <TextView
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/readWriteSize_title" />

            <EditText
                android:id="@+id/accessInventoryLength2"
                style="@style/style_normal_font"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_left_padding">


        </TableRow>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:visibility="gone">

        <TableRow
            android:id="@+id/tableCosechador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_header_inventory">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Tag(s) Cosechador"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/md_white_1000" />


                <TextView
                    android:id="@+id/inventoryRfidCosechador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/md_white_1000" />
            </LinearLayout>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/inventoryRfidListCosechador"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="95"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.25dp" />

        <TextView
            android:id="@+id/inventoryRfidEmptyCosechador"
            style="@style/style_medium_font"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="95"
            android:padding="@dimen/default_padding"
            android:text="@string/notag_found"
            android:visibility="gone" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_header_inventory">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Tag(s) Mallas"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/md_white_1000" />


                <TextView
                    android:id="@+id/inventoryRfidYield1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/md_white_1000" />
            </LinearLayout>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ListView
            android:id="@+id/inventoryRfidList1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="95"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.25dp" />

        <TextView
            android:id="@+id/inventoryRfidEmpty1"
            style="@style/style_medium_font"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="95"
            android:padding="@dimen/default_padding"
            android:text="@string/notag_found"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/inventoryRfidButtonT1"
                style="@style/style_button_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="BUZ" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/inventoryRfidRunTime1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/inventoryRfidFilterOn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filter On"
                android:textColor="#ff0000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/inventoryRfidVoltageLevel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_ok_selector"
            android:text="LIBERAR"
            android:textColor="@color/md_white_1000" />


        <Button
            android:id="@+id/inventoryRfidButton1"
            style="@style/style_button_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/redondo"
            android:gravity="center_vertical|center_horizontal"
            android:text="INICIAR"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/scanButton"
            android:layout_alignRight="@+id/resultLinearLayout"
            android:layout_alignBottom="@+id/scanButton"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_nok_selector"
            android:text="LIMPIAR"
            android:textColor="@color/md_white_1000" />

        <TextView
            android:id="@+id/inventoryRfidRate"
            style="@style/style_button_font"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/inventoryRfidYield111"
            style="@style/style_button_font"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/inventoryRfidButton11"
            style="@style/style_button_font"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start_title" />

        <TextView
            android:id="@+id/inventoryRfidRate1"
            style="@style/style_button_font"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>